# OneAI

./: .dockerignore  .gitignore  .replit  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  start.sh
Palette-Web-main/: package-lock.json
Palette-Web-main/Palette-Backend/: .gitignore  .vercelignore
Palette-Web-main/Palette-Backend/app/: app.py  requirements.txt  vercel.json
Palette-Web-main/palette-frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json
Palette-Web-main/palette-frontend/shared/: model.ts
Palette-Web-main/palette-frontend/src/: App.tsx  index.css
attached_assets/: Pasted--workspace-git-add-Dockerfile-requirements-txt-dockerignore-git-commit-m-Add-Docker-support-gi-1764568144769_1764568144771.txt  Pasted-Error-codes-Explore-API-error-codes-and-solutions-This-guide-includes-an-overview-on-error-codes-yo-1764307006740_1764307006741.txt  Pasted-import-React-useState-from-react-import-Link-from-wouter-import-Button-from-co-1764403139361_1764403139362.txt  Pasted-import-React-useState-from-react-import-Link-from-wouter-import-Button-from-co-1764403161336_1764403161337.txt  content-1764307204472.md
client/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: ChatArea.tsx  ChatInput.tsx  Login.tsx  LoginModal.tsx  LoginPage.tsx  MessageList.tsx  (+5 more)
server/: app.py  google_auth.py  models.py  replit_auth.py  requirements.txt
(+47 files in other folders)
